--- a/packages.config
+++ b/packages.config
@@ -3,5 +3,6 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
