Added licence and project urls to nuget specifications

--- a/HttpApiClient.nuspec
+++ b/HttpApiClient.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>HttpApiClient</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <title>HttpApiClient</title>
     <authors>Costin Morariu</authors>
     <owners>Costin Morariu</owners>
@@ -10,6 +10,8 @@
     <description>Simple client library for parsing HTTP API responses</description>
     <releaseNotes>Naming changes and methods replaced with properties for better readability</releaseNotes>
     <copyright>Copyright © 2013</copyright>
+	<projectUrl>https://github.com/stonemonkey/HttpApiClient</projectUrl>
+	<licenseUrl>https://github.com/stonemonkey/HttpApiClient/blob/master/LICENSE</licenseUrl>
     <tags>HttpApiClient</tags>
 	<dependencies>
 		<group targetFramework ="portable">
