--- a/HttpApiClient.nuspec
+++ b/HttpApiClient.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>HttpApiClient</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <title>HttpApiClient</title>
     <authors>Costin Morariu</authors>
     <owners>Costin Morariu</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Simple client library for parsing HTTP API responses</description>
-    <releaseNotes>Naming changes and methods replaced with properties for better readability</releaseNotes>
+    <releaseNotes>Fixed missing configuration headers property</releaseNotes>
     <copyright>Copyright © 2013</copyright>
 	<projectUrl>https://github.com/stonemonkey/HttpApiClient</projectUrl>
 	<licenseUrl>https://github.com/stonemonkey/HttpApiClient/blob/master/LICENSE</licenseUrl>
