--- a/HttpApiClient.nuspec
+++ b/HttpApiClient.nuspec
@@ -2,22 +2,24 @@
 <package >
   <metadata>
     <id>HttpApiClient</id>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <title>HttpApiClient</title>
     <authors>Costin Morariu</authors>
     <owners>Costin Morariu</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Simple client library for parsing HTTP API responses</description>
-    <releaseNotes>Fixed Config class constructors to speciffically initialize URN or URL instances</releaseNotes>
+    <releaseNotes>Updated dependencies</releaseNotes>
     <copyright>Copyright © 2013</copyright>
 	<projectUrl>https://github.com/stonemonkey/HttpApiClient</projectUrl>
 	<licenseUrl>https://github.com/stonemonkey/HttpApiClient/blob/master/LICENSE</licenseUrl>
     <tags>HttpApiClient</tags>
 	<dependencies>
 		<group targetFramework ="portable">
-			<dependency id="Newtonsoft.Json" version="9.0.1"/>
-			<dependency id="Microsoft.Net.Http" version="2.2.29"/>
-	  </group>
+      <dependency id="Microsoft.Bcl" version="1.1.10"/>
+      <dependency id="Microsoft.Bcl.Build" version="1.0.14"/>
+      <dependency id="Microsoft.Net.Http" version="2.2.29"/>
+      <dependency id="Newtonsoft.Json" version="10.0.2"/>
+    </group>
     </dependencies>
   </metadata>
 </package>
