--- a/HttpApiClient.csproj
+++ b/HttpApiClient.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Parsers\JsonParser.cs" />
     <Compile Include="Parsers\StringParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Requests\ConsoleResponseLogger.cs" />
     <Compile Include="Requests\DeleteRequest.cs" />
     <Compile Include="Requests\GetRequest.cs" />
     <Compile Include="Requests\IRequest.cs" />
