Added JsonParser extensions.

--- a/HttpApiClient.csproj
+++ b/HttpApiClient.csproj
@@ -99,14 +99,16 @@
     <Compile Include="Parsers\HttpParserBase.cs" />
     <Compile Include="Parsers\HttpStatusCodeExtensions.cs" />
     <Compile Include="Parsers\IResponseParser.cs" />
+    <Compile Include="Parsers\JsonExtensions.cs" />
     <Compile Include="Parsers\JsonParser.cs" />
+    <Compile Include="Parsers\JsonParserExtensions.cs" />
     <Compile Include="Parsers\StringParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Requests\ConsoleResponseLogger.cs" />
+    <Compile Include="ConsoleResponseLogger.cs" />
     <Compile Include="Requests\DeleteRequest.cs" />
     <Compile Include="Requests\GetRequest.cs" />
     <Compile Include="Requests\IRequest.cs" />
-    <Compile Include="Requests\IResponseLogger.cs" />
+    <Compile Include="IResponseLogger.cs" />
     <Compile Include="Requests\PostRequest.cs" />
     <Compile Include="Requests\PutRequest.cs" />
     <Compile Include="Requests\RequestBase.cs" />
