--- a/Test.Server.WebApi/Test.Server.WebApi.csproj
+++ b/Test.Server.WebApi/Test.Server.WebApi.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="iisexpress-start.cmd" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
